--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -59,6 +59,13 @@
             <version>1.1.10</version>
         </dependency>
 
+        <!--page helper-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.10</version>
+        </dependency>
+
 
 
         <!--MyBatis Generator-->
