--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -1,61 +1,46 @@
+# Common Configurations
 spring:
   profiles:
-    active: sly
+    active: chris
 
----
-spring:
-  profiles: sly
   datasource:
-    url: jdbc:mysql://localhost:3306/cskaoyanmall?serverTimezone=Hongkong&useSSL=false
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    password: 13579abc
     type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
 
-mybatis:
-  type-handlers-package: com.cskaoyan.cskaoyanmall.handler
 
 server:
   servlet:
-    context-path: /
+    context-path: /admin
   port: 80
-
+#---
+#spring:
+#  profiles: zck
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/malldemo?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone= Asia/Shanghai
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    username: root
+#    password: 121212
+#    type: com.alibaba.druid.pool.DruidDataSource
 
 ---
 spring:
-  profiles: tangxian
+  profiles: chris
   datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    # if not specified, use HikariPool by default
+#    type: com.alibaba.druid.pool.DruidDataSource
+#    driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: root
-    url: jdbc:mysql://localhost:3306/cskaoyanmall?serverTimezone=GMT&useSSL=false
-server:
-  servlet:
-    context-path: /
-  port: 80
-
+    password: 123456
+    url: jdbc:mysql://localhost:3306/mall?useSSL=false
 ---
 spring:
-  profiles: xxx
+  profiles: weihao
   datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.cj.jdbc.Driver
+#    type: com.alibaba.druid.pool.DruidDataSource
+#    driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: xxxx
-    url: jdbc:mysql://localhost:3306/cskaoyanmall?serverTimezone=GMT&useSSL=false
-server:
-  servlet:
-    context-path: /
-  port: 80
-
-
-
-
-
-
-
-
+    password: 123456
+    url: jdbc:mysql://localhost:3306/mall
 
 
 ## The following are old configurations: ##
