--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -41,62 +41,10 @@ spring:
     username: root
     password: 123456
     url: jdbc:mysql://localhost:3306/mall
-
-
-## The following are old configurations: ##
-
-
-#server:
-#  servlet:
-#    context-path: /admin
-#  port: 80
-#
-#spring:
-#  datasource:
-#    type: com.alibaba.druid.pool.DruidDataSource
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/cskaoyanmall?useSSL=false
-#    username: root
-#    password: 123456
-#  profiles:
-#    active: alpha
-#
-#---
-#spring:
-#  profiles: alpha
-#
-#db:
-#  driver-class-name: com.mysql.cj.jdbc.Driver
-#  url: jdbc:mysql://localhost:3306/cskaoyanmall?serverTimezone=GMT&useSSL=false
-#  username: root
-#  password: 123456
-#
-#---
-#spring:
-#  profiles: didi
-#
-#db:
-#  driver-class-name: com.mysql.cj.jdbc.Driver
-#  url: jdbc:mysql://localhost:3306/cskaoyanmall?serverTimezone=GMT&useSSL=false
-#  username: root
-#  password: 123456
-#
-#---
-#spring:
-#  profiles: cly
-#
-#db:
-#  driver-class-name: com.mysql.cj.jdbc.Driver
-#  url: jdbc:mysql://localhost:3306/cskaoyanmall?serverTimezone=GMT&useSSL=false
-#  username: root
-#  password: 123456
-#
-#---
-#spring:
-#  profiles: zsw
-#
-#db:
-#  driver-class-name: com.mysql.cj.jdbc.Driver
-#  url: jdbc:mysql://localhost:3306/cskaoyanmall?serverTimezone=GMT&useSSL=false
-#  username: root
-#  password: mysql520520
+---
+spring:
+  profiles: donghao
+  datasource:
+    username: root
+    password: root
+    url: jdbc:mysql://localhost:3306/cskaoyanmall
