initial commit By Wei
Signed-off-by: Chris Wei <weikang0827@hotmail.com>

--- a/demo/.gitignore
+++ b/demo/.gitignore
@@ -2,7 +2,7 @@ HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
-!**/src/test/**
+# !**/src/test/**
 
 ### STS ###
 .apt_generated
@@ -35,3 +35,4 @@ build/
 generatorConfig.xml
 .mvn/
 .class
+test/
