--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -31,7 +31,7 @@ spring:
 #    driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://localhost:3306/mall?useSSL=false
+    url: jdbc:mysql://localhost:3306/mall?useSSL=false&characterEncoding=UTF-8
 ---
 spring:
   profiles: weihao
