--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -93,8 +93,11 @@
             <artifactId>spring-boot-starter-log4j</artifactId>
             <version>1.3.8.RELEASE</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>maven_repository.com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.1.37</version>
+        </dependency>
 
 
         <!--MyBatis Generator-->
