commit by "weihao"

--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # Common Configurations
 spring:
   profiles:
-    active: chris
+    active: weihao
 
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
@@ -40,7 +40,8 @@ spring:
 #    driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://localhost:3306/mall
+    url: jdbc:mysql://localhost:3306/mall?useSSL=false&characterEncoding=UTF-8
+
 ---
 spring:
   profiles: donghao
