--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # Common Configurations
 spring:
   profiles:
-    active: weihao
+    active: hjx
 
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
