--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -128,9 +128,9 @@
         </dependency>
 
         <dependency>
-            <groupId>maven_repository.com.alibaba</groupId>
+            <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.1.37</version>
+            <version>1.2.58</version>
         </dependency>
 
 
